After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 333254 - theora encoder does not set IN_CAPS flag properly
theora encoder does not set IN_CAPS flag properly
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
0.10.3
Other Linux
: Normal normal
: 0.10.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2006-03-03 15:16 UTC by Thomas Vander Stichele
Modified: 2006-03-03 19:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch + testsuite update (30.52 KB, patch)
2006-03-03 15:17 UTC, Thomas Vander Stichele
none Details | Review

Description Thomas Vander Stichele 2006-03-03 15:16:42 UTC
This causes problems when muxing a theora-only stream with an initial offset - the ogg page queue keeps filling and never flushes out any pages.

For example: gst-launch-0.10 -v videotestsrc timestamp-offset=500000000 ! video/x-raw-yuv,framerate=5/1 ! theoraenc ! oggmux ! filesink location=theora.ogg

Note how the file will only contain the three header packets

gst-launch-0.10 -v videotestsrc timestamp-offset=500000000 ! video/x-raw-yuv,framerate=5/1 ! theoraenc ! fakesink

See how the flags are not set
Comment 1 Thomas Vander Stichele 2006-03-03 15:17:29 UTC
Created attachment 60571 [details] [review]
patch + testsuite update
Comment 2 Thomas Vander Stichele 2006-03-03 19:13:26 UTC
commited to cvs